--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -280,6 +280,18 @@ dependencies {
     implementation("com.applitools:vhs-androidx:+") {
 	exclude module: 'commons-logging'
     }
+    implementation "androidx.appcompat:appcompat:1.4.2"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "com.google.android.material:material:1.3.0"
+    implementation "com.github.bumptech.glide:glide:4.10.0"
+    implementation "androidx.viewpager:viewpager:1.0.0"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation "androidx.preference:preference:1.1.1"
+    implementation "androidx.gridlayout:gridlayout:1.0.0"
+    implementation "com.google.android.flexbox:flexbox:3.0.0"
+    
+
+
 
     if (enableHermes) {
         //noinspection GradleDynamicVersion
